--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.4",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.10",
     "cors": "^2.8.5",
     "excel4node": "^1.7.2",
     "express": "^4.17.1",
     "lodash": "^4.17.21",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "objects-to-csv": "^1.3.6",
+    "puppeteer": "^10.2.0",
+    "ts-node": "^10.2.1"
   },
   "devDependencies": {
     "@types/node": "^16.9.1",
